# subschema

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  security.yml
scripts/: performance_smoke.py  raw_schema_read_inventory.py  release_smoke.py  semantic_boundary_inventory.py  supply_chain_check.sh
src/subschema/: __init__.py  api.py  cli.py  contracts.py  dialects.py  exceptions.py  json_data.py  projection.py  provenance.py  regex.py  symbolic.py  types.py  values.py  work_protocols.py
src/subschema/compiler/: __init__.py  evaluation.py  finite_values.py  ir.py  literals.py  normalization.py  proof_pipeline.py  resources.py  schemas.py  semantics.py  tagged_unions.py
src/subschema/compiler/domains/: arrays.py  numbers.py  object_facts.py  objects.py  strings.py  types.py
src/subschema/ir/: __init__.py  constraints.py  evaluation.py  nodes.py  references.py  semantics.py  terms.py
src/subschema/kernel/: __init__.py  applicators.py  certificates.py  composition.py  confirmation.py  constraints.py  context.py  contracts.py  difference.py  disjointness.py  driver.py  engine.py  evaluation.py  evaluation_traces.py  finite.py  formulas.py  ir.py  literals.py  normalization.py  overlaps.py  projection.py  protocols.py  provenance.py  references.py  regex.py  sat.py  scalars.py  schemas.py  semantic.py  symbolic.py  tagged_unions.py  validation.py  values.py  witnesses.py
src/subschema/kernel/domains/: __init__.py  arrays.py  numbers.py  objects.py  strings.py  types.py
src/subschema/prover/: __init__.py  applicators.py  array_contains.py  confirmation.py  context.py  difference.py  difference_arrays.py  difference_objects.py  disjointness.py  driver.py  engine.py  evaluation_traces.py  finite.py  formulas.py  overlaps.py  projection.py  protocols.py  sat.py  scalars.py  witness_results.py  witnesses.py
src/subschema/prover/rules/: __init__.py  applicators.py  (+4 more)
src/subschema/validator/: __init__.py  core.py  normalization.py
test/: conftest.py  proof_oracle.py  schema_strategies.py  semantic_oracle.py  test_ai_subschema.py  test_api.py  test_array.py  test_array_202012.py  test_boolean.py  test_boolean_schemas.py  test_conditionals.py  test_const.py  test_contains.py  test_dependent_required.py  test_dependent_schemas.py  test_dialect_random_properties.py  test_dialects.py  test_enum.py  test_finite_fragments.py  test_from_lale.py  test_ir_engine.py  test_kernel_layers.py  test_keyword_support.py  test_low_cost_fragments.py  test_mix.py  test_more.py  test_null.py  test_numeric.py  test_numeric_dialects.py  test_object.py  test_package_layers.py  test_performance_smoke.py  test_proof_boundaries.py  test_property_invariants.py  test_property_names.py  test_pydantic_patterns.py  test_random_schema_properties.py  test_raw_schema_read_inventory.py  test_refs.py  test_regex_language.py  (+4 more)
typings/greenery/: __init__.pyi
typings/jsonschema_rs/: __init__.pyi
typings/z3/: __init__.pyi
